Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40601

WA_TranslucentBackground does not work with direct2d engine

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.0
    • 5.3.1
    • QPA: Direct2D
    • None
    • 1cdcf64ad5c0f42d23ad1a53c965df5c69a6bb4b

    Description

      WA_TranslucentBackground does not work with direct2d engine

      In our application, a top level QWidget, which is constructed with Qt::WA_TranslucentBackground, does not become visible after calling show(), when platform is "direct2d".

      The same application works perfectly with platform "windows".

      The custom widget constructor is like this:

      CMyWidget::CMyWidget()
      : QWidget( 0, Qt::WindowStaysOnTopHint | Qt::Tool | Qt::FramelessWindowHint )
      {
      setAttribute( Qt::WA_TranslucentBackground, true );
      }

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andrew.knight Andrew Knight
            louai Louai Al-Khanji
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes